--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:              Clean Blog
 email:              your-email@example.com
 description:        A Blog Theme by Start Bootstrap
 author:             Start Bootstrap
-baseurl:            "/blog"
+baseurl:            "/z2ao"
 url:                "https://z2ao.github.io"
 
 # Social Profiles
