--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:              Clean Blog
-email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
-author:             Start Bootstrap
+title:              z2ao's Blog
+email:              ckddh2300@gmail.com
+description:        ... doodle ...
+author:             z2ao
 baseurl:            ""
 url:                "https://z2ao.github.io"
 
